fixed the cart so that it is in the correct position regarless of where the user is vertically on the page. Truncated all prices to two decimal points.

--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -1,4 +1,5 @@
 .cart {
+  box-sizing: border-box;
   display: none;
   font-size: 1.25rem;
   font-family: 'poppins';
@@ -11,8 +12,9 @@
   grid-row: 1 / 3;
   transform: translateX(100%);
   transition: transform 0.5s ease;
-  position: relative;
-  overflow-y: auto;
+  position: fixed;
+  right: 0;
+  width: clamp(360px, 50vw, 550px);
 }
 
 .bgFilter {
@@ -27,6 +29,7 @@
   width: 100%;
   padding: 1.5rem;
   background-color: var(--primary-bg);
+  overflow: auto;
 }
 
 .title {
